css/main.css
/* Import Fonts from Google */
@import url(https://fonts.googleapis.com/css?family=Josefin+Slab:400,700);
@import url(https://fonts.googleapis.com/css?family=Josefin+Sans);

/* Full-Page Formatting */

body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure {
    margin: 0;
    padding: 0;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
    align-items: center;
}

h1 {
    font-size: 16pt;
    display: flex;
    justify-content: center;
    align-items: center;
}

h2 {
    font-size: 14pt;
}

h3 {
    font-size: 12pt;
}

a {
    text-decoration: none;
}

.title-group {
    display: flex;
}

.toggle-nav-icon {
    display: flex;
    align-items: center;
}

.title-line {
    display: flex;
    justify-content: center;
    width: 6em;
    margin: 0em 1em;
}

.directory {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}
.top-navset {
    display: flex;
    flex-wrap: wrap;
}
.lower-navset {
    display: flex;
    flex-wrap: wrap;
}
.full-navset {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    height: 8em;
    width: 16em;
}
.nav-list {
    padding: 0em 1em;
    list-style: none;
    width: 6em;
    display: flex;
    flex-wrap: nowrap;
}
.upcoming-event {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 10em;
    margin: 0em 1em;
}
.upcoming-title {
    display: flex;
    justify-content: center;
    max-width: 16em;
}
.upcoming-content {
    display: flex;
    justify-content: center;
}

.mca-bio {
    display: flex;
    margin: 0em 2em;
    max-width: 21em;
}

.link {
    padding: 0 4px;
}

.mca-logo {
    width: 160.25px;
    height: 79.5px;
}

/* Tablet Styles */

@media only screen and (min-width: 401px) and (max-width: 960px) {
    body {
        background-color: yellow;
        display: flex;
        flex-direction: column;
    }

    header {
        width:48em;
    }
    .title-group {
        display: flex;
        justify-content: space-around;
    }

}

/* Desktop Styles */

@media only screen and (min-width: 961px) {
    body {
        background-color: lightblue;
        display: flex;
        flex-direction: column;
    }

    header {
        width:48em;
    }
    .title-group {
        display: flex;
        justify-content: space-around;
    }
}

